chore: prep submodule and tailwind setup

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Math Diagrams</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div
+      class="container mx-auto flex flex-col justify-center items-center"
+      id="root"
+    />
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
