feat: first working version

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div
-      class="container mx-auto flex flex-col justify-center items-center"
+      class="container mx-auto flex flex-col justify-center items-center m-8"
       id="root"
     />
     <script type="module" src="/src/main.tsx"></script>
