--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Math Diagrams</title>
   </head>
-  <body>
+  <body class="dark:bg-slate-950">
     <div
       class="container mx-auto flex flex-col justify-center items-center m-8"
       id="root"
