--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <title>Math Diagrams</title>
   </head>
   <body class="dark:bg-slate-950">
-    <div
-      class="container mx-auto flex flex-col justify-center items-center m-8"
-      id="root"
-    />
+    <div id="root" />
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
