--- a/index.html
+++ b/index.html
@@ -5,11 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Math Diagrams</title>
   </head>
-  <body>
-    <div
-      class="container mx-auto flex flex-col justify-center items-center m-8"
-      id="root"
-    />
+  <body class="dark:bg-slate-950">
+    <div id="root" />
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
